# claw-code

./: .gitignore
articles/: 2026-04-21-china-japan-rare-earth-export.md
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: claw_provider.rs  mod.rs  openai_compat.rs
rust/crates/claw-cli/: Cargo.toml
rust/crates/claw-cli/src/: app.rs  args.rs  init.rs  input.rs  main.rs  render.rs
rust/crates/runtime/src/: bash.rs
rust/crates/tools/src/: lib.rs
src/: __init__.py  context.py  main.py  parity_audit.py
src/reference_data/: archive_surface_snapshot.json  commands_snapshot.json  tools_snapshot.json
src/reference_data/subsystems/: components.json  services.json  skills.json  types.json
